# rust_dt

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
crates/dt-agent/: Cargo.toml
crates/dt-agent/src/: builder.rs  component.rs  lib.rs  store.rs  tests.rs
crates/dt-behavior/: Cargo.toml
crates/dt-behavior/src/: contact.rs  context.rs  error.rs  intent.rs  lib.rs  model.rs  noop.rs  tests.rs
crates/dt-core/: Cargo.toml
crates/dt-core/src/: error.rs  geo.rs  ids.rs  lib.rs  rng.rs  tests.rs  time.rs  transport.rs
crates/dt-mobility/: Cargo.toml
crates/dt-mobility/src/: engine.rs  error.rs  lib.rs  state.rs  store.rs  tests.rs
crates/dt-output/: Cargo.toml
crates/dt-output/src/: csv.rs  error.rs  lib.rs  observer.rs  parquet.rs  row.rs  sqlite.rs  tests.rs  writer.rs
crates/dt-schedule/: Cargo.toml
crates/dt-schedule/src/: activity.rs  error.rs  lib.rs  loader.rs  modifier.rs  tests.rs  wake_queue.rs
crates/dt-sim/: Cargo.toml
crates/dt-sim/src/: builder.rs  error.rs  lib.rs  observer.rs  sim.rs  tests.rs
crates/dt-spatial/: Cargo.toml
crates/dt-spatial/src/: error.rs  lib.rs  network.rs  osm.rs  router.rs  tests.rs
docs/: api-reference.md  architecture.md  getting-started.md  guide.md
examples/fast/: Cargo.toml
examples/fast/src/: main.rs  network.rs
examples/large/: Cargo.toml
examples/large/src/: export_nodes.rs  main.rs  network.rs
examples/mobile_al/: Cargo.toml
examples/mobile_al/src/: main.rs
examples/xlarge/: Cargo.toml
examples/xlarge/src/: export_nodes.rs  main.rs  network.rs
examples/xsmall/: Cargo.toml
examples/xsmall/src/: export_nodes.rs  main.rs  network.rs
viz/: README.md
viz/backend/: csv_parser.py  main.py  requirements.txt  sim_runner.py
viz/frontend/: index.html  package-lock.json  package.json
viz/frontend/src/: api.ts  main.tsx  store.ts  styles.css  types.ts
viz/frontend/src/components/: App.tsx  ChartPane.tsx  Controls.tsx  MapPane.tsx
viz/frontend/src/hooks/: useLiveStream.ts  usePlayback.ts
