[package]
name    = "large"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "large"
path = "src/main.rs"

[dependencies]
dt-agent    = { path = "../../crates/dt-agent" }
dt-behavior = { path = "../../crates/dt-behavior" }
dt-core     = { path = "../../crates/dt-core" }
dt-schedule = { path = "../../crates/dt-schedule" }
dt-sim      = { path = "../../crates/dt-sim", features = ["parallel"] }
dt-spatial  = { path = "../../crates/dt-spatial" }
anyhow      = "1"
