[package]
name        = "xsmall"
version     = "0.1.0"
edition     = "2024"
default-run = "xsmall"

[[bin]]
name = "xsmall"
path = "src/main.rs"

[[bin]]
name = "export_nodes"
path = "src/export_nodes.rs"

[dependencies]
dt-agent    = { path = "../../crates/dt-agent" }
dt-behavior = { path = "../../crates/dt-behavior" }
dt-core     = { path = "../../crates/dt-core" }
dt-output   = { path = "../../crates/dt-output" }
dt-schedule = { path = "../../crates/dt-schedule" }
dt-sim      = { path = "../../crates/dt-sim" }
dt-mobility = { path = "../../crates/dt-mobility" }
dt-spatial  = { path = "../../crates/dt-spatial" }
anyhow        = "1"
memory-stats  = "1"
serde_json    = "1"
